<resources>
    <string name="app_name">RHRemote</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_new_room">Add room</string>
    <string name="title_activity_about">About</string>
    <string name="createRoom">Create room</string>
    <string name="updateRoom">Update room</string>
    <string name="deleteRoom">Remove</string>
    <string name="bedroom">Bedroom</string>
    <string name="bathroom">Bathroom</string>
    <string name="kitchen">Kitchen</string>
    <string name="livingRoom">Living room</string>
    <string name="workRoom">Work room</string>
    <string name="coatRoom">Coat room</string>
    <string name="guestRoom">Guest room</string>
    <string name="studyRoom">Study room</string>
    <string name="alertBoxTitle">Something went wrong!</string>
    <string name="roomName">New room</string>
    <string name="roomUsername">user</string>
    <string name="roomPassword">user</string>
    <string name="roomLocalUrl">192.168.1.1</string>
    <string name="roomLocalPort">8080</string>
    <string name="roomOutsideURL"></string>
    <string name="roomOutsidePort"></string>
    <string name="actionbarSubtitle">Room: </string>
    <string name="holderTemperature">Temperature: </string>
    <string name="holderTemperatureUnit">°C</string>
    <string name="holderSubtitleUpdate">Last updated: </string>
    <string name="holderSubtitleUpdateOld">(OLD)</string>
    <string name="holderSubtitleUpdateNever">Last updated: Never</string>
    <string name="updateRoomAuthenticationError">Authentication error! Check your username and password!</string>
    <string name="updateRoomRoomError">"We couldn't get the room data! Check your room settings."</string>
    <string name="updateRoomResponseError">"Something went wrong! We couldn't read the room response!"</string>
    <string name="updateRoomNoOutsideURL">"Error connecting! You are not in the same network as your room and you haven't provided an external URL!"</string>
    <string name="updateRoomURLError">There was an error forming a valid connection URL. Check your room connection settings!</string>
    <string name="settingsSettings">Settings</string>
    <string name="settingsSSID">SSID</string>
    <string name="settingsNewRoom">Add room</string>
    <string name="settingsAbout">About</string>
    <string name="settingsSSIDSummary">SSID of your room network</string>
    <string name="settingsNewRoomSummary">Add new room</string>
    <string name="settingsAboutSummary">About</string>
    <string name="settingsRoomSettings">Room settings</string>
    <string name="settingsRooms">Rooms</string>
    <string name="actionbarRHRemote">RHRemote</string>
    <string name="aboutVersion">Version</string>
    <string name="aboutVersionNumber">0.1</string>
    <string name="aboutText">Created by Andrej Rolih and Rok Tavčar\n\nwww.r00li.com\ngithub.com/r00li/RHRemote</string>
    <string name="newRoomNewRoom">New room</string>
    <string name="newRoomNewRoomHint">New room</string>
    <string name="newRoomUser">User</string>
    <string name="newRoomUserHint">user</string>
    <string name="newRoomPassword">Password</string>
    <string name="newRoomPasswordHint">password</string>
    <string name="newRoomLocalURL">Local URL</string>
    <string name="newRoomLocalURLHint">192.168.1.1</string>
    <string name="newRoomLocalPort">Local port</string>
    <string name="newRoomLocalPortHint">8080</string>
    <string name="newRoomOutsideURL">Outside URL</string>
    <string name="newRoomOutsideURLHint">www.MyHome.com</string>
    <string name="newRoomOutsidePort">Outside port</string>
    <string name="newRoomOutsidePortHint">8080</string>
    <string name="newRoomIcon">Room icon</string>
    <string name="roomControlNoRoom">"No room data to show!\nUse settings menu to add a new room."</string>
    <string name="roomBlindsNewText">New text</string>
    <string name="roomBlindsIncrease">+</string>
    <string name="roomBlindsDecrease">-</string>
    <string name="roomInfoNewText">New text</string>
    <string name="roomInfoUpdate">Last updated: Never</string>
    <string name="roomLightNewText">New Text</string>
</resources>
