<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context="com.r00li.rhremote.About">

    <TextView android:text="@string/aboutVersion" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_version"/>
    <TextView android:text="@string/aboutVersionNumber" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true" />
    <View
        android:layout_below="@id/about_version"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:id="@+id/about_separator"
        />
    <TextView
        android:linksClickable="true"
        android:autoLink="web"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_separator"
        android:layout_marginTop="20dp"
        android:text="@string/aboutText"/>
</RelativeLayout>
