<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="60dp"
    android:id="@+id/blinds_cell">

    <ImageView
        android:layout_marginLeft="5dp"
        android:padding="3dp"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:src="@drawable/ic_blind_vec2"
        android:scaleType="centerInside"
        />

    <TextView
        android:layout_toRightOf="@id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:text="@string/roomBlindsNewText"
        android:textColor="#FFFFFF"
        android:id="@+id/textView" />

    <LinearLayout
        android:id="@+id/blindIndicatorHolder"
        android:orientation="vertical"
        android:layout_width="35dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginRight="19dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:background="#4Dffc719"
            android:id="@+id/blindIndicator2"/>
        <View
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:background="#FFffc719"
            android:id="@+id/blindIndicator1"/>
        <View
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:background="#FFffc719"
            android:id="@+id/blindIndicator0"/>
        </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="35dp"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_toLeftOf="@id/blindIndicatorHolder"
        android:layout_marginRight="10dp"
        android:id="@+id/blindButtonPlus"
        android:text="@string/roomBlindsIncrease"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="35dp"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_toLeftOf="@id/blindButtonPlus"
        android:layout_marginRight="3dp"
        android:id="@+id/blindButtonMinus"
        android:text="@string/roomBlindsDecrease"/>

</RelativeLayout>